--- a/src/app/components/over-view-today-card/over-view-today-card.component.html
+++ b/src/app/components/over-view-today-card/over-view-today-card.component.html
@@ -1,7 +1,7 @@
 <article class="bg-Light-Grayish-Blue w-[326px] h-[125px] mb-4 mx-auto rounded-[5px] p-[27px] cursor-pointer hover:brightness-95 dark:bg-Dark-Desaturated-Blue hover:dark:brightness-125">
   <div class="flex justify-between  items-center ">
     <p class="text-Dark-Grayish-Blue-Text">{{cardHijoToday.statsType}}</p>
-    <img src="/assets/images/{{typeOfNetwork[cardHijoToday.network]}}.svg" alt="{{cardHijoToday.network}}">
+    <img src="assets/images/{{typeOfNetwork[cardHijoToday.network]}}.svg" alt="{{cardHijoToday.network}}">
   </div>
   <div class="flex justify-between">
     <p class="text-[42px] font-bold text-Very-Dark-Blue dark:text-white">{{cardHijoToday.stats | numberFormat}}</p>
